# groupchat-wrapped

./: .gitignore  README.md  groupchat_wrapped.html  output.html  pyproject.toml
docs/: index.html
example_data/: message_1.json
groupchat_wrapped/: __init__.py  analyzer.py  cli.py  generator.py  parser.py
input/: .gitkeep
input/messages/inbox/najlepsi_znajomi_abc123/: message_1.json
output/: .gitkeep
