[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "groupchat-wrapped"
version = "1.0.0"
description = "Generate fun 'Wrapped' statistics from Facebook Messenger exports"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your@email.com"}
]
keywords = ["facebook", "messenger", "wrapped", "statistics", "chat"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "click>=8.0.0",
    "jinja2>=3.0.0",
]

[project.scripts]
groupchat-wrapped = "groupchat_wrapped.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/groupchat-wrapped"

[tool.setuptools.packages.find]
where = ["."]
